# swc-plugin-vue-jsx

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  changelog.md  dprint.json  package.json  pnpm-lock.yaml  tsconfig.json  wasm.test.ts
plugin/: Cargo.toml
plugin/src/: lib.rs
visitor/: Cargo.toml
visitor/src/: directive.rs  lib.rs  options.rs  patch_flags.rs  resolve_type.rs  tests.rs  util.rs
visitor/tests/: fixture.rs
visitor/tests/fixture/custom-directive/: output.js
visitor/tests/fixture/custom-directive-with-argument-and-modifiers/: output.js
visitor/tests/fixture/custom-element/: output.js
visitor/tests/fixture/custom-pragma-in-comment/: output.js
visitor/tests/fixture/custom-pragma-in-options/: output.js
visitor/tests/fixture/disable-object-slot/: output.js
visitor/tests/fixture/empty-string/: output.js
visitor/tests/fixture/fragment-already-imported/: output.js
visitor/tests/fixture/function-expr-slot/: output.js
visitor/tests/fixture/keep-alive-named-import/: output.js
visitor/tests/fixture/keep-alive-namespace-import/: output.js
visitor/tests/fixture/keep-namespace-import/: output.js
visitor/tests/fixture/merge-class-style-attrs/: output.js
visitor/tests/fixture/merge-props-order/: output.js
visitor/tests/fixture/model-as-prop-name/: output.js
visitor/tests/fixture/multiple-exprs-slot/: output.js
visitor/tests/fixture/nesting-slot-flags/: output.js
visitor/tests/fixture/non-literal-expr-slot/: output.js
visitor/tests/fixture/override-props-multiple/: output.js
visitor/tests/fixture/override-props-single/: output.js
visitor/tests/fixture/reassign-variable-as-component/: output.js
visitor/tests/fixture/resolve-props-types/with-defaults/: output.js
visitor/tests/fixture/single-attr/: output.js
visitor/tests/fixture/slot-in-arrow-function-bug/: output.js
visitor/tests/fixture/specifiers-merged-into-single-import-decl/: output.js
visitor/tests/fixture/v-html/: output.js
visitor/tests/fixture/v-model-value-supports-variable/: output.js
visitor/tests/fixture/v-model-with-arg-and-modifier/: output.js
visitor/tests/fixture/v-model-with-checkbox/: output.js
visitor/tests/fixture/v-model-with-dynamic-type-input/: output.js
visitor/tests/fixture/v-model-with-input-lazy-modifier/: output.js
visitor/tests/fixture/v-model-with-radio/: output.js
visitor/tests/fixture/v-model-with-select/: output.js
visitor/tests/fixture/v-model-with-text-input/: output.js
visitor/tests/fixture/v-model-with-textarea/: output.js
visitor/tests/fixture/v-models/: output.js
visitor/tests/fixture/v-show/: output.js
visitor/tests/fixture/v-slots/: output.js
visitor/tests/fixture/v-slots-complex/: output.js
visitor/tests/fixture/v-text/: output.js
visitor/tests/fixture/without-props/: output.js
(+16 files in other folders)
