[package]
name = "swc-plugin-vue-jsx"
description = "SWC plugin for transforming Vue JSX."
version = "0.3.1"
authors = ["Pig Fang <g-plane@hotmail.com>"]
license = "MIT"
repository = "https://github.com/g-plane/swc-plugin-vue-jsx"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
swc_core = { version = "0.90", features = ["ecma_plugin_transform"] }
swc-vue-jsx-visitor = { path = "../visitor", version = "*" }
