[package]
name = "swc-vue-jsx-visitor"
description = "SWC visitor for transforming Vue JSX."
version = "0.2.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
license = "MIT"
repository = "https://github.com/g-plane/swc-plugin-vue-jsx"
edition = "2021"

[dependencies]
bitflags = "1.3"
css_dataset = "0.2"
indexmap = "1.9"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
swc_core = { version = "0.39", features = ["ecma_utils"] }

[dev-dependencies]
swc_ecma_parser = "0.122"
