[package]
name = "swc-vue-jsx-visitor"
description = "SWC visitor for transforming Vue JSX."
version = "0.2.7"
authors = ["Pig Fang <g-plane@hotmail.com>"]
license = "MIT"
repository = "https://github.com/g-plane/swc-plugin-vue-jsx"
edition = "2021"

[dependencies]
bitflags = "2.4"
css_dataset = "0.3"
fnv = "1.0"
indexmap = "2.1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
swc_core = { version = "0.89", features = [
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
] }

[dev-dependencies]
serde_json = "1.0"
testing = "0.35"
